--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -1,15 +1,20 @@
-# Translation of WordPress - Development in Serbian
-# This file is distributed under the same license as the WordPress - Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2016-12-04 20:03:52+0000\n"
+"Project-Id-Version: WordPress - Development\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2017-05-04 20:26+0000\n"
+"PO-Revision-Date: 2017-05-04 20:31+0000\n"
+"Last-Translator: \n"
+"Language-Team: English (USA)\n"
+"Language: en-US\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: GlotPress/2.3.0-alpha\n"
-"Language: en_US\n"
-"Project-Id-Version: WordPress - Development\n"
+"X-Loco-Source-Locale: en_RS\n"
+"X-Generator: Loco - https://localise.biz/\n"
+"X-Loco-Parser: loco_parse_po"
 
 #: sfb slider
 msgid "Види више"
@@ -84,8 +89,12 @@ msgid "Наставне базе"
 msgstr "Тeaching base"
 
 #: sfb footer
-msgid "Универзитет у Београду — Шумарски факулет Кнеза Вишеслава 1, 11030 Београд тел: (011) 3053-990; факс: (011) 2545-485 Сајт креирао"
-msgstr "University of Belgrade - Faculty of Forestry Knez Viseslav 1, 11030 Belgrade phone: (011) 3053-990; fax: (011) 2545-485 Site created"
+msgid ""
+"Универзитет у Београду — Шумарски факулет Кнеза Вишеслава 1, 11030 Београд "
+"тел: (011) 3053-990; факс: (011) 2545-485 Сајт креирао"
+msgstr ""
+"University of Belgrade - Faculty of Forestry Knez Viseslav 1, 11030 Belgrade "
+"phone: (011) 3053-990; fax: (011) 2545-485 Site created"
 
 #: sfb odsek
 msgid "Актуелности"
@@ -242,3 +251,12 @@ msgstr "News categories"
 
 msgid "Катедре"
 msgstr "Chairs"
+
+msgid "Скупови и конференције"
+msgstr "Meetings and conferences"
+
+msgid "Национални пројекти"
+msgstr "National projects"
+
+msgid "Међународни пројекти"
+msgstr "International projects"
