--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WordPress - Development\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-04 20:26+0000\n"
-"PO-Revision-Date: 2017-05-04 22:19+0000\n"
+"PO-Revision-Date: 2017-05-04 22:46+0000\n"
 "Last-Translator: \n"
 "Language-Team: English (USA)\n"
 "Language: en-US\n"
@@ -269,3 +269,6 @@ msgstr "Category:"
 
 msgid "Шумарски факултет"
 msgstr "Faculty of Forestry"
+
+msgid "Види све вести"
+msgstr "See all news"
